@@ -1,3 +1,7 @@
+(copyfiles (choices "1" "2" "3") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/2 && mkdir _cfs_/3 && touch _cfs_/3/1","1","test -f _cfd_/1 && test -f _cfd_/2 && test -d _cfd_/3 && test -f _cfd_/3/1 && rm -Rf _cfs_ _cfd_"
+(copyfiles (choices "1" "2" "3") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/2 && mkdir _cfs_/3 && mkdir _cfs_/3/2 && touch _cfs_/3/1 && touch _cfs_/3/2/1","1","test -f _cfd_/1 && test -f _cfd_/2 && test -d _cfd_/3 && test -f _cfd_/3/1 && test -f _cfd_/3/2/1 && rm -Rf _cfs_ _cfd_"
+(copyfiles (choices "0" "1" "2" "3") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/2 && mkdir _cfs_/3 && mkdir _cfs_/3/2 && touch _cfs_/3/1 && touch _cfs_/3/2/1","Line 1: No such file or directory '_cfs_/0' 0","rm -Rf _cfs_ _cfd_"
+(set @strict 0) (copyfiles (choices "0" "1" "2" "3") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/2 && mkdir _cfs_/3 && mkdir _cfs_/3/2 && touch _cfs_/3/1 && touch _cfs_/3/2/1","1","test -f _cfd_/1 && test -f _cfd_/2 && test -d _cfd_/3 && test -f _cfd_/3/1 && test -f _cfd_/3/2/1 && rm -Rf _cfs_ _cfd_"
 (copyfiles (choices "1" "2" "3" "4") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/2 _cfs_/3 _cfs_/1.font","Line 1: No such file or directory '_cfs_/1' 0","rm -Rf _cfs_ _cfd_"
 (set @strict 0) (copyfiles (choices "1" "2" "3" "4") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/2 _cfs_/3","1","test -f _cfd_/2 && test -f _cfd_/3 && test ! -f _cfd_/1 && test ! -f _cfd_/4 && rm -Rf _cfs_ _cfd_"
 (set @strict 0) (copyfiles (fonts) (choices "1" "2" "3" "4") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/2 _cfs_/3 _cfs_/2.font","1","test -f _cfd_/2 && test -f _cfd_/2.font && test -f _cfd_/3 && test ! -f _cfd_/1 && test ! -f _cfd_/4 && rm -Rf _cfs_ _cfd_"
